Fix spacing issues

--- a/modules/web/src/assets/css/global/_main.scss
+++ b/modules/web/src/assets/css/global/_main.scss
@@ -502,7 +502,7 @@ km-dashboard {
 
 .km-search-input {
   &.mat-form-field {
-    margin: -10px 0 -30px;
+    margin: -10px 10px -30px 0;
     max-height: 30px;
     width: 280px;
 
